--- a/src/client/app/applications/wishes/components/kyle-jodi/kyle-jodi.component.scss
+++ b/src/client/app/applications/wishes/components/kyle-jodi/kyle-jodi.component.scss
@@ -9,10 +9,13 @@
   flex-direction: row;
   margin-top: 10px;
   flex-wrap: wrap;
+  justify-content: center;
 }
+
 
 .label-style {
   color: $offblack;
+  text-align: center;
 }
 
 a {
